# embedded_task

./: CMakeLists.txt  README.md  client.py  kernel_module.c  server.py
